@@ -2,14 +2,26 @@
 
 echo Configuring gtypist @VERSION
 echo - using MinGW and PDCurses
-echo - no Native Language Support
+echo - with Native Language Support
 
 echo creating src/config.h...
 echo -e '/* config.h */\r' > src/config.h
-echo -e '#undef ENABLE_NLS\r' >> src/config.h
+echo -e '#define ENABLE_NLS 1\r' >> src/config.h
 echo -e '#define PACKAGE "gtypist"\r' >> src/config.h
-echo -e '#define VERSION "2.9beta1"\r' >> src/config.h
-echo -e '#define HAVE_PDCURSES\r' >> src/config.h
+echo -e '#define VERSION "@VERSION"\r' >> src/config.h
+echo -e '#define HAVE_PDCURSES 1\r' >> src/config.h
+echo -e '#define LOCALEDIR "."\r' >> src/config.h
+
+echo copying UI translations over...
+(cd po/
+for i in *.gmo
+do
+    lang=${i/.gmo/}
+    mkdir ../$lang
+    mkdir ../$lang/LC_MESSAGES
+    cp $lang.gmo ../$lang/LC_MESSAGES/gtypist.mo
+done
+)
 
 echo creating Makefile...
 echo -e '# gtypist: Makefile for MinGW\r' > Makefile
@@ -20,7 +32,7 @@ echo -e '# Set the path to a compiled PDCurses library here:\r' >> Makefile
 echo -e 'PDCURSES_PATH=C:\dev\PDCurses-3.4\r' >> Makefile
 echo -e '\r' >> Makefile
 echo -e 'gtypist.exe:\r' >> Makefile
-echo -e '	gcc -DMINGW -DPDC_WIDE -I$(PDCURSES_PATH) -Isrc -static -s -O2 -o gtypist src/error.c src/script.c src/cursmenu.c src/gtypist.c src/getopt.c src/getopt1.c src/utf8.c -L$(PDCURSES_PATH)/win32 -lpdcurses -liconv\r' >> Makefile
+echo -e '	gcc -DMINGW -DPDC_WIDE -I$(PDCURSES_PATH) -Isrc -static -s -O2 -o gtypist src/error.c src/script.c src/cursmenu.c src/gtypist.c src/getopt.c src/getopt1.c src/utf8.c -L$(PDCURSES_PATH)/win32 -lpdcurses -liconv -lgettextlib.dll -lintl.dll\r' >> Makefile
 echo
 echo
 echo IMPORTANT: Before running make, change the PDCURSES_PATH variable in the
